objects/Aggro_Match__c.object
<CustomObject>
    <description>This object is used to find duplicates in In Different object through the aggro service.</description>
    <fields>
        <fullName>Account_Matches__c</fullName>
        <description>Ids of the matched account records.</description>
        <label>Account Matches</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The City for the record we want to match.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>The name of the entity we want to match.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Matches__c</fullName>
        <description>Ids of the matched dnb records.</description>
        <label>Duns Matches</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Matches__c</fullName>
        <description>Ids of the matched Lead records.</description>
        <label>Lead Matches</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The state of the record we want to match.</description>
        <label>State</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the request.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>StreetAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>The 5 or 9 digit zip code of the record we want to match.</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Aggro Match</label>
    <nameField>
        <displayFormat>AM-{000000}</displayFormat>
        <label>Aggro Match Object</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aggro Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>